bug fixed, new font size "h3" added

--- a/portfolio-item.html
+++ b/portfolio-item.html
@@ -22,9 +22,10 @@
 
 </head>
 <body>
+
 <header>
     <div class="logo">
-        <!-- <img class="pfp" src="img/aIqbal.jpg" alt=""> -->
+        <img class="pfp" src="img/logo.PNG" alt="">
     </div>
     <!-- toggle button for navigation-->
     <button class="nav-toggle" aria-label="toggle navigation">
@@ -41,19 +42,16 @@
 </header>
 
 <!-- Introduction -->
-<section class="intro">
+<section class="intro" >
     <h1 class="section__title section__title--intro">
         The title <strong>of my project</strong>
     </h1>
     <p class="section__subtitle section__subtitle--intro">A short subtitle</p>
-    <img src="img/services-bg.jpg" alt="" class="intro__img">
+    <img src="img/aIqbal_1.png" alt="" class="intro__img">
 </section>
 
-<div class="portfolio-item-individuals">
-    <p></p>
-    <img src="img/services-bg.jpg" alt="">
-    <p></p>
-</div>
+
+
 
 <!-- Footer -->
 <footer class="footer">
