--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <body>
     <header>
         <div class="logo">
-            <!-- <img class="pfp" src="img/aIqbal.jpg" alt=""> -->
+             <img class="pfp" src="img/logo.PNG" alt="">
         </div>
         <!-- toggle button for navigation-->
         <button class="nav-toggle" aria-label="toggle navigation">
@@ -45,7 +45,7 @@
         <h1 class="section__title section__title--intro">
             Hi, I am <strong>Asif Iqbal</strong>
         </h1>
-        <p class="section__subtitle section__subtitle--intro">computer engineering student</p>
+        <p class="section__subtitle section__subtitle--intro">Computer Engineer</p>
         <img src="img/aIqbal_1.png" alt="At Niagara Falls" class="intro__img">
     </section>
 
@@ -54,13 +54,13 @@
         <h2 class="section__title section__title--services">What I do</h2>
         <div class="services">
             <div class="service">
-                <h3>Digital System Design</h3>
+                <h3>Digital Systems</h3>
                 <p>
                     <!-- write the description here -->
                 </p>
             </div> <!-- service -->
             <div class="service">
-                <h3>Micro-controller Programming</h3>
+                <h3>Embedded Systems</h3>
                 <p>
                     <!-- write the description here -->
                 </p>
