skeleton is done Add project images and description

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           crossorigin="anonymous" />
 
     <!-- fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro:400,900|Source+Sans+Pro:300,900&display=swap"
+    <link href="https://fonts.googleapis.com/css?family=Lora:400,700|Roboto+Slab:400,700&display=swap"
           rel="stylesheet">
 
     <link rel="stylesheet" href="css/style.css">
@@ -96,7 +96,7 @@
 
         <div class="portfolio">
             <!-- Item 1 -->
-            <a href="#" class="portfolio__item">
+            <a href="portfolio-item.html" class="portfolio__item">
                 <img src="img/aIqbal_1.png" alt="Project Description" class="portfolio__img">
             </a>
             <!-- Item 2 -->
