--- a/portfolio-item.html
+++ b/portfolio-item.html
@@ -15,7 +15,7 @@
           crossorigin="anonymous" />
 
     <!-- fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro:400,900|Source+Sans+Pro:300,900&display=swap"
+    <link href="https://fonts.googleapis.com/css?family=Lora:400,700|Roboto+Slab:400,700&display=swap"
           rel="stylesheet">
 
     <link rel="stylesheet" href="css/style.css">
@@ -33,15 +33,15 @@
     </button>
     <nav class="nav">
         <ul class="nav__list">
-            <li class="nav__item"><a href="#home" class="nav__link">Home</a> </li>
-            <li class="nav__item"><a href="#services" class="nav__link">My Services</a> </li>
-            <li class="nav__item"><a href="#about" class="nav__link">About Me</a> </li>
-            <li class="nav__item"><a href="#work" class="nav__link">My Work</a> </li>
+            <li class="nav__item"><a href="index.html" class="nav__link">Home</a> </li>
+            <li class="nav__item"><a href="index.html#services" class="nav__link">My Services</a> </li>
+            <li class="nav__item"><a href="index.html#about" class="nav__link">About Me</a> </li>
+            <li class="nav__item"><a href="index.html#work" class="nav__link">My Work</a> </li>
         </ul>
     </nav>
 </header>
 
-<!-- Introduction -->
+<!-- Projects -->
 <section class="intro" >
     <h1 class="section__title section__title--intro">
         The title <strong>of my project</strong>
@@ -51,7 +51,12 @@
 </section>
 
 
-
+<div class="portfolio-item-individuals">
+    <p></p>
+    <img src="img/services-bg.jpg" alt="">
+    <p></p>
+    <p></p>
+</div>
 
 <!-- Footer -->
 <footer class="footer">
