Added "What I Do" section finishing up "About me" Section

--- a/index.html
+++ b/index.html
@@ -57,18 +57,24 @@
                 <h3>Digital Systems</h3>
                 <p>
                     <!-- write the description here -->
+                    Experienced in design and verification using Digital Systems methodologies. Used VHDL and
+                    SystemVerilog to create synthesizable designs. My work revolves around IC and ASIC design.
                 </p>
             </div> <!-- service -->
             <div class="service">
                 <h3>Embedded Systems</h3>
                 <p>
                     <!-- write the description here -->
+                    Experienced in programming Micro-Controllers and System on Chip. My work is primarily on designing
+                    small systems and optimizing algorithm efficiency.
                 </p>
             </div> <!-- service -->
             <div class="service">
                 <h3>Machine Learning</h3>
                 <p>
                     <!-- write the description here -->
+                    Experienced with Regression Models and Clustering algorithm. I have worked with
+                    Logistic Regression, K-Means algorithm and Gaussian Mixture Model.
                 </p>
             </div> <!-- service -->
         </div><!-- services -->
@@ -82,7 +88,11 @@
         <p class="section__subtitle section__subtitle--about"></p>
 
         <div class="about-me__body">
-            <p></p>
+            <p>
+                Aspiring engineer based off of NYC. I went to Stony Brook University for my undergraduate degree and
+                currently finishing up my Masters degree. My major is Computer Engineering. My area of interest is
+                digital systems, micro-controllers, machine learning and programming in general.
+            </p>
             <p></p>
         </div>
 
