--- a/index.html
+++ b/index.html
@@ -90,10 +90,14 @@
         <div class="about-me__body">
             <p>
                 Aspiring engineer based off of NYC. I went to Stony Brook University for my undergraduate degree and
-                currently finishing up my Masters degree. My major is Computer Engineering. My area of interest is
-                digital systems, micro-controllers, machine learning and programming in general.
+                currently working my Masters Degree. My major is Computer Engineering. My area of interest is
+                digital systems, micro-controllers, machine learning and programming in general. Learning and teaching
+                about tools and technologies is my passion.
             </p>
-            <p></p>
+            <p>
+                A little about my personal life. I enjoy playing badminton and tennis. In my time-off, I play a video
+                games and watch tv shows. My favorite video game is King of Fighters 97 and favorite TV show is FRIENDS.
+            </p>
         </div>
 
         <img src="img/aIqbal_1.png" alt="A picture of Asif" class="about-me__img">
@@ -106,12 +110,12 @@
 
         <div class="portfolio">
             <!-- Item 1 -->
-            <a href="portfolio-item.html" class="portfolio__item">
-                <img src="img/aIqbal_1.png" alt="Project Description" class="portfolio__img">
+            <a href="portfolio-item-0.html" class="portfolio__item">
+                <img src="img/neural-network.png" alt="Project Description" class="portfolio__img">
             </a>
             <!-- Item 2 -->
             <a href="#" class="portfolio__item">
-                <img src="img/aIqbal_1.png" alt="Project Description" class="portfolio__img">
+                <img src="img/encryption.jpg" alt="Project Description" class="portfolio__img">
             </a>
             <!-- Item 3 -->
             <a href="#" class="portfolio__item">
@@ -147,4 +151,4 @@
     <script src="js/index.js"></script>
 
 </body>
-</html>
+</html
