2 more projects added

--- a/index.html
+++ b/index.html
@@ -114,16 +114,16 @@
                 <img src="img/neural-network.png" alt="Project Description" class="portfolio__img">
             </a>
             <!-- Item 2 -->
-            <a href="#" class="portfolio__item">
+            <a href="portfolio-item-1.html" class="portfolio__item">
                 <img src="img/encryption.jpg" alt="Project Description" class="portfolio__img">
             </a>
             <!-- Item 3 -->
-            <a href="#" class="portfolio__item">
-                <img src="img/aIqbal_1.png" alt="Project Description" class="portfolio__img">
+            <a href="portfolio-item-2.html" class="portfolio__item">
+                <img src="img/simulation.jpg" alt="Project Description" class="portfolio__img">
             </a>
             <!-- Item 4 -->
-            <a href="#" class="portfolio__item">
-                <img src="img/aIqbal_1.png" alt="Project Description" class="portfolio__img">
+            <a href="portfolio-item-3.html" class="portfolio__item">
+                <img src="img/bank.jpg" alt="Project Description" class="portfolio__img">
             </a>
             <!-- Item 5 -->
             <a href="#" class="portfolio__item">
@@ -151,4 +151,4 @@
     <script src="js/index.js"></script>
 
 </body>
-</html
+</html>
