total of 6 projects added

--- a/index.html
+++ b/index.html
@@ -126,12 +126,12 @@
                 <img src="img/bank.jpg" alt="Project Description" class="portfolio__img">
             </a>
             <!-- Item 5 -->
-            <a href="#" class="portfolio__item">
-                <img src="img/aIqbal_1.png" alt="Project Description" class="portfolio__img">
+            <a href="portfolio-item-4.html" class="portfolio__item">
+                <img src="img/clusters.jpg" alt="Project Description" class="portfolio__img">
             </a>
             <!-- Item 6 -->
-            <a href="#" class="portfolio__item">
-                <img src="img/aIqbal_1.png" alt="Project Description" class="portfolio__img">
+            <a href="portfolio-item-5.html" class="portfolio__item">
+                <img src="img/logistic-0.jpg" alt="Project Description" class="portfolio__img">
             </a>
         </div>
     </section>
