--- a/portfolio-item-2.html
+++ b/portfolio-item-2.html
@@ -44,29 +44,29 @@
 <!-- Projects -->
 <section class="intro" >
   <h1 class="section__title section__title--intro">
-    <strong>Logistic Regression</strong>
+    <strong>Banking System Simulation</strong>
   </h1>
-  <p class="section__subtitle section__subtitle--intro">to determine an Electric Grid stability</p>
-  <img src="img/logistic-1.png" alt="" class="intro__img">
+  <p class="section__subtitle section__subtitle--intro">of a day in a bank</p>
+  <img src="img/bank-1.jpg" alt="" class="intro__img">
 </section>
 
 
 <div class="portfolio-item-individuals">
   <p>
-    The goal of this project is apply logistic regression to determine whether an electrical grid is stable or not.
-    This technique yields a binary result, 0 or 1. One meaning the grid is stable and Zero means it's unstable. This
-    variation of regression model was created to used in survivability analysis. However, we can use it to determine
-    stability as well. Prior to running an electrical grid, it is important to determine its stability. Many harm
-    can come if its not stable.
+    The goal of this project is to simulate a banking system. In a bank, there are certain number of tellers available.
+    People go in a bank to withdraw, deposit, print transactions, open an account etc. The customers waits in a queue.
+    Depending on the number of tellers available, this process can take some time.
   </p>
   <p>
-    Using various different explanatory variable, we were able to create a regression model. Using evaluation metric
-    such as McFadden's method, a pseudo-r-squared of 0.1971 was achieved. Via his method, 0.2 is considered as an
-    excellent score. Therefore, the model came out to be great.
+    The program takes in the number of tellers and customers as an input and randomly generates the tasks the customers
+    want to perform. The customers can perform 1 or all 3 tasks, withdraw, deposit and print recent transactions.
   </p>
   <p>
-    Two people including me worked in this project. Used python and matlab. Libraries such as sklearn, pandas, numpy,
-    matplotlib etc. was used.
+    Currently, working on making a record system to store the customers information. This helps further analyzing
+    different scenarios.
+  </p>
+  <p>
+    The project development and testing was done by myself. Used C++.
   </p>
 </div>
 
