updated intro image

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             Hi, I am <strong>Asif Iqbal</strong>
         </h1>
         <p class="section__subtitle section__subtitle--intro">Computer Engineer</p>
-        <img src="img/aIqbal_1.png" alt="At Niagara Falls" class="intro__img">
+        <img src="img/aIqbal_0.jpg" alt="At Niagara Falls" class="intro__img">
     </section>
 
     <!-- My services -->
@@ -100,7 +100,7 @@
             </p>
         </div>
 
-        <img src="img/aIqbal_1.png" alt="A picture of Asif" class="about-me__img">
+        <img src="img/aIqbal.jpg" alt="A picture of Asif" class="about-me__img">
     </section>
 
     <!-- My Work -->
