--- a/portfolio-item-3.html
+++ b/portfolio-item-3.html
@@ -46,7 +46,7 @@
   <h1 class="section__title section__title--intro">
     <strong>Clustering with K-Means and GMM</strong>
   </h1>
-  <p class="section__subtitle section__subtitle--intro">on a sample dataset</p>
+  <p class="section__subtitle section__subtitle--intro">on a simulated dataset</p>
   <img src="img/clusters.jpg" alt="" class="intro__img">
 </section>
 
