Added a new project

--- a/index.html
+++ b/index.html
@@ -109,25 +109,29 @@
         <p class="section__subtitle section__subtitle--work">A selection of my range of work</p>
 
         <div class="portfolio">
-            <!-- Item 1 -->
+            <!-- Item 0 -->
             <a href="portfolio-item-0.html" class="portfolio__item">
                 <img src="img/neural-network.png" alt="Project Description" class="portfolio__img">
             </a>
-            <!-- Item 2 -->
+            <!-- Item 1 -->
             <a href="portfolio-item-1.html" class="portfolio__item">
                 <img src="img/encryption.jpg" alt="Project Description" class="portfolio__img">
             </a>
-            <!-- Item 4 -->
+            <!-- Item 2 -->
             <a href="portfolio-item-2.html" class="portfolio__item">
                 <img src="img/bank.jpg" alt="Project Description" class="portfolio__img">
             </a>
-            <!-- Item 5 -->
+            <!-- Item 3 -->
             <a href="portfolio-item-3.html" class="portfolio__item">
                 <img src="img/clusters.jpg" alt="Project Description" class="portfolio__img">
             </a>
-            <!-- Item 6 -->
+            <!-- Item 4 -->
             <a href="portfolio-item-4.html" class="portfolio__item">
                 <img src="img/logistic-0.jpg" alt="Project Description" class="portfolio__img">
+            </a>
+            <!-- Item 5 -->
+            <a href="portfolio-item-5.html" class="portfolio__item">
+                <img src="img/rest-api.png" alt="Project Description" class="portfolio__img">
             </a>
         </div>
     </section>
