--- a/index.html
+++ b/index.html
@@ -90,13 +90,9 @@
         <div class="about-me__body">
             <p>
                 Aspiring engineer based off of NYC. I went to Stony Brook University for my undergraduate degree and
-                currently working my Masters Degree. My major is Computer Engineering. My area of interest is
+                currently working on my Masters Degree. My major is Computer Engineering. My area of interest is
                 digital systems, micro-controllers, machine learning and programming in general. Learning and teaching
                 about tools and technologies is my passion.
-            </p>
-            <p>
-                A little about my personal life. I enjoy playing badminton and tennis. In my time-off, I play a video
-                games and watch tv shows. My favorite video game is King of Fighters 97 and favorite TV show is FRIENDS.
             </p>
         </div>
 
